--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha ./**/*.test.js --exit",
     "test:ts": "check-dts",
     "coverage": "nyc --reporter=lcov npm run test",
-    "postcoverage": "codecov",
+    "postcoverage": "npx is-ci && codecov",
     "lint": "npx standard ./src/**/*.js --fix"
   },
   "keywords": [
@@ -25,8 +25,10 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "codecov": "^3.8.3",
     "mocha": "^9.1.1",
     "nanoid": "^3.1.25",
+    "nyc": "^15.1.0",
     "sinon": "^11.1.2"
   }
 }
