src|tests: Added tags for monk commands
Signed-off-by: harrytwright <haroldtomwright@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "nanoid": "^3.1.25",
     "nyc": "^15.1.0",
     "sinon": "^11.1.2"
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
   }
 }
