ci: Fix for older node versions
Signed-off-by: harrytwright <haroldtomwright@gmail.com>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,6 +53,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Peer Dependencies
+        if: ${{ matrix.node-version != 16 }}
+        run: npm i --save-dev monk zipkin
+
       - name: Run ${{ matrix.test-suite }}
         run: npm run ${{ matrix.test-suite }}
         env:
