--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
     "zipkin": "^0.22.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.1",
+    "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "codecov": "^3.8.3",
+    "express": "^4.17.1",
     "mocha": "^9.1.1",
     "nanoid": "^3.1.25",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "zipkin-context-cls": "^0.22.0",
+    "zipkin-instrumentation-express": "^0.22.0",
+    "zipkin-transport-http": "^0.22.0"
   },
   "standard": {
     "env": [
