--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^16.10.1",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "codecov": "^3.8.3",
     "express": "^4.17.1",
     "mocha": "^9.1.1",
