--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.1",
+    "benchmark": "^2.1.4",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
