--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./src/index.d.ts",
   "scripts": {
     "test": "mocha ./**/*.test.js --exit",
-    "test:ts": "check-dts",
+    "test:ts": "check-dts test/index.types.ts",
     "coverage": "nyc --reporter=lcov npm run test",
     "postcoverage": "npx is-ci && codecov",
     "lint": "npx standard ./src/**/*.js --fix"
@@ -30,6 +30,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "check-dts": "^0.5.6",
     "codecov": "^3.8.3",
     "express": "^4.17.1",
     "mocha": "^9.1.1",
